--- a/styles/video.css
+++ b/styles/video.css
@@ -65,6 +65,13 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
  }
+@media(min-width:320px) and (max-width:480px)
+{
+  .video-grid{
+   grid-template-columns: 1fr;
+  }
+}
+ 
 .video-time{
   font-family: roboto arial;
   font-size: 12px;
