--- a/styles/video.css
+++ b/styles/video.css
@@ -1,99 +1,88 @@
-
-
- .thumbnail
- {
+.thumbnail {
   width: 100%;
-  
- }
- .video-title{
+}
+
+.video-title {
   margin: 0;
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
   margin-bottom: 10px;
- }
+}
 
- .video-author,
- .video-stats{
+.video-author,
+.video-stats {
   display: block;
-  font-size:12px;
-  color:rgb(96,96,96);
- }
- 
- .video-author{
+  font-size: 12px;
+  color: rgb(96, 96, 96);
+}
+
+.video-author {
   margin-bottom: 6px;
- }
+}
 
- 
- .video-info-grid{
-  display:grid;
+.video-info-grid {
+  display: grid;
   grid-template-columns: 50px 1fr;
- }
-  
- .profile-picture{
-  width:36px;
-  border-radius: 50px;
- }
+}
 
- .thumbnail-row{
+.profile-picture {
+  width: 36px;
+  border-radius: 50px;
+}
+
+.thumbnail-row {
   margin-bottom: 8px;
   position: relative;
- }
+}
 
- .video-grid{
-  display:grid;
+.video-grid {
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
   row-gap: 40px;
- }
+}
 
- @media (max-width:750px)
- {
-  .video-grid{
-    grid-template-columns: 1fr 1fr;
+@media (max-width: 750px) {
+  .video-grid {
+    grid-template-columns: 1fr; 
   }
- }
- @media (min-width: 751px) and (max-width: 999x)
- {
-  .video-grid{
+    
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+  .video-grid {
     grid-template-columns: 1fr 1fr 1fr;
   }
- }
- @media(min-width:1000px)
- {
-  .video-grid{
+}
+
+@media (min-width: 1000px) {
+  .video-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
- }
-@media(min-width:320px) and (max-width:480px)
-{
-  .video-grid{
-   grid-template-columns: 1fr;
-  }
 }
- 
-.video-time{
-  font-family: roboto arial;
+
+
+
+.video-time {
+  font-family: roboto, arial;
   font-size: 12px;
   font-weight: 500;
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding: 4px;
   border-radius: 2px;
   background-color: black;
-  color:white;
+  color: white;
   position: absolute;
   bottom: 8px;
-  right:5px;
+  right: 5px;
 }
-.profile-tooltip-container
-{
-  z-index:100 ;
+
+.profile-tooltip-container {
+  z-index: 100;
 }
-.profile-tooltip{
-  height:36px;
-  width:200px;
+
+.profile-tooltip {
+  height: 36px;
+  width: 200px;
   background-color: rgb(255, 255, 255);
 }
- 
